# tclir

./: .gitignore  .gitmodules  Cargo.toml  build.ps1  build.sh  write_serial.py
.cargo/: config.toml
src/: app.rs  interrupt.rs  irsender.rs  leds.rs  logger.rs  main.rs  receiver.rs  timesync.rs  timewriter.rs
