[package]
name = "myclockfirmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
nb = "1"
fugit = "0.3.6"
fugit-timer = "0.1.3"

[dependencies.defmt]
version = "0.3.2"
features = ["encoding-raw"]

[dependencies.stm32f1]
version = "0.15.1"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
path = "stm32f1xx-hal"
features = ["rt", "stm32f103", "medium"]

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
